# media-pipeline

./: Cargo.toml  README.md  RESEARCH.md
.github/workflows/: ci.yml
src/: audio.rs  audiovideo.rs  error.rs  lib.rs  main_loop.rs  rtp_server.rs  rtp_stream.rs  rtp_stream_record.rs  rtp_udp_client_record.rs  rtp_udp_server.rs  runloop.rs  video.rs
