[package]
name = "media_pipeline"
version = "0.1.0"
authors = ["David DiMaria <david.dimaria@conduit.vc>"]
edition = "2018"


[dependencies]
anyhow = "1.0" # remove
bytes = "1.0.1"
byte-slice-cast = "1"
derive_more = "0.99.5"
env_logger = "0.8.4"
log = "0.4.14"
gstreamer = "0.17"
glib = "0.14"
gstreamer-app = "0.17" 
gstreamer-audio = "0.17" 
gstreamer-base = "0.17" # TODO: consider removing
gstreamer-video = "0.17" # TODO: consider removing
thiserror = "1.0"
tokio = { version = "1.8.1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"

[features]
test_udp_server = []
